# vault

./: .gitignore  CLAUDE.md  justfile
.claude/: settings.local.json
.claude/commands/: agents.md  dream.md  stats.md  team.md  teams.md
.claude/hooks/: block-secrets.sh
.claude/rules/: multi-team.md
.claude/skills/agent-creator/: SKILL.md
.claude/skills/mental-model/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
.claude/skills/setup/: SKILL.md
knowledge/: claude-code-leak.md  pi-architecture.md  tac-notes.md
multi-team/: DASHBOARD.md  config.yaml  tmux-team.sh
multi-team/.pi/expertise/: architect-expertise.md  architect.md  qa-engineer-expertise.md  qa-engineer.md  sdk-analyst-expertise.md  spec-writer-expertise.md
multi-team/agents/: context-loader-expertise.md  context-loader.md  orchestrator-expertise.md  orchestrator.md
multi-team/agents/engineering/: backend-dev-expertise.md  backend-dev.md  code-reviewer-expertise.md  code-reviewer.md  frontend-dev-expertise.md  frontend-dev.md  lead-expertise.md  lead.md  playwright-tester-expertise.md  playwright-tester.md
multi-team/agents/planning/: architect-expertise.md  architect.md  lead-expertise.md  lead.md  researcher-expertise.md  researcher.md  spec-writer-expertise.md  spec-writer.md
multi-team/agents/research/: doc-researcher-expertise.md  doc-researcher.md  lead-expertise.md  lead.md  sdk-analyst-expertise.md  sdk-analyst.md
multi-team/agents/trading/: data-analyst-expertise.md  data-analyst.md  exchange-connector-dev-expertise.md  exchange-connector-dev.md  lead-expertise.md  lead.md  quant-strategist-expertise.md  quant-strategist.md  rust-engine-dev-expertise.md  rust-engine-dev.md
multi-team/agents/validation/: lead-expertise.md  lead.md  qa-engineer-expertise.md  qa-engineer.md  security-reviewer-expertise.md  security-reviewer.md
multi-team/phases/: README.md  manifest.md
multi-team/phases/phase-5b/: doc-research-findings.md  exact-api-research.md  exact-research-prompt.md  sdk-research-findings.md
multi-team/prompts/: generate-build-prompts.md  plan-build-validate.md
multi-team/specs/: crypto-arbitrage-analysis.md  crypto-arbitrage-readiness.md  crypto-arbitrage-roi-analysis.md  exact-meeting-qa.md  new-agent-definitions.md  phase-5b-implementation-plan.md  phase-handoff-protocol.md  phase-workflow-architecture.md  profitable-strategies-architecture.md  profitable-strategies-research.md  sol-arb-architecture.md
multi-team/tests/: numbers-reality-check.md
phases/: manifest.md
phases/kalshi-research/: doc-findings.md  research-handoff.md  sdk-findings.md
phases/phase-1/: context.md  gate-decision.md  plan.md  spec.md
phases/phase-2/: build-report.md  gate-decision.md  review.md
projects/arbitrage-trader/: .gitignore  Cargo.toml  SPEC.md  TODO.md
projects/arbitrage-trader/.pi/expertise/: architect-expertise.md
projects/arbitrage-trader/config/: default.toml  pairs.toml
projects/arbitrage-trader/crates/arb-cli/: Cargo.toml
projects/arbitrage-trader/crates/arb-cli/src/: check_gauge.rs  check_linegauge.rs  check_tailwind.rs  main.rs  tui.rs
projects/arbitrage-trader/crates/arb-db/: Cargo.toml
projects/arbitrage-trader/crates/arb-db/src/: lib.rs  models.rs  repo.rs
projects/arbitrage-trader/crates/arb-engine/: Cargo.toml
projects/arbitrage-trader/crates/arb-engine/src/: detector.rs  engine.rs  executor.rs  fees.rs  lib.rs  monitor.rs  paper.rs  price_cache.rs  tracker.rs  types.rs  unwinder.rs
projects/arbitrage-trader/crates/arb-kalshi/: Cargo.toml
projects/arbitrage-trader/crates/arb-kalshi/src/: auth.rs  client.rs  connector.rs  error.rs  lib.rs  mock.rs  rate_limit.rs  types.rs  ws.rs
projects/arbitrage-trader/crates/arb-matcher/: Cargo.toml
projects/arbitrage-trader/crates/arb-matcher/src/: category.rs  lib.rs  normalize.rs  pipeline.rs  scorer.rs  store.rs  types.rs
projects/arbitrage-trader/crates/arb-polymarket/: Cargo.toml
projects/arbitrage-trader/crates/arb-polymarket/examples/: ws_test.rs
projects/arbitrage-trader/crates/arb-polymarket/src/: auth.rs  client.rs  connector.rs  error.rs  lib.rs  mock.rs  rate_limit.rs  signing.rs  types.rs  ws.rs
projects/arbitrage-trader/crates/arb-risk/: Cargo.toml
projects/arbitrage-trader/crates/arb-risk/src/: exposure.rs  lib.rs  limits.rs  manager.rs
projects/arbitrage-trader/crates/arb-types/: Cargo.toml
projects/arbitrage-trader/crates/arb-types/src/: error.rs  event.rs  lib.rs  market.rs  opportunity.rs  order.rs  position.rs  price.rs
projects/arbitrage-trader/docs/: PHASES.md  api-pagination-and-rate-limits.md  architecture-plan.md  development-cost-proposal.md  matching-problem.md  phase2-build-prompts.md  phase2.5-remaining-prompt.md  phase3-build-prompt.md  phase4-build-prompt.md  phase5-build-prompt.md  phase6-polymarket-integration-prompt.md  strategy-assessment.md  strategy-improvement.md  trading-team-integration.md  tui-bugs-fix.md
projects/arbitrage-trader/docs/analysis/: db-health-check.md  discovery-diagnostic.md  filter-diagnostic.md  first-match-analysis.md  full-trading-assessment.md  health-check-2026-04-07.md  market-browser-viability.md  matcher-plan-review.md  phantom-profit-forensics.md
projects/arbitrage-trader/docs/review/: kalshi-connector-wiring-review.md  minor-fixes-review.md  orderbook-fix-review.md  p0-price-ingestion-review.md  p1p2-mode-fees-review.md  safety-fixes-review.md  tui-bugs-review.md
projects/arbitrage-trader/docs/specs/: tui-chart-architecture.md
projects/arbitrage-trader/migrations/: 001_initial_schema.sql  002_unwind_events.sql  003_add_mode_column.sql  004_discovery_tables.sql
projects/arbitrage-trader/phases/phase-5/: plan.md  review.md  spec.md
projects/arbitrage-trader/specs/: api-rate-limits-research.md  deployment-decisions.md  deployment-strategy.md  kalshi-ws-diagnosis.md  matcher-redesign-plan.md  matcher-redesign-spec.md  matcher-research-handoff.md
specs/: ws-regression-diagnosis.md
supwise/: config.yaml
supwise/agents/: orchestrator.md
templates/: new-agent-lead.md  new-agent-worker.md  new-expertise.md
(+112 files in other folders)
