[package]
name = "arb-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arb"
path = "src/main.rs"

[dependencies]
arb-types = { workspace = true }
arb-db = { workspace = true }
arb-risk = { workspace = true }
arb-engine = { workspace = true }
arb-polymarket = { workspace = true }
arb-kalshi = { workspace = true }
arb-matcher = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
