[package]
name = "arb-kalshi"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock = []

[dependencies]
arb-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
base64 = { workspace = true }
governor = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
