[package]
name = "arb-matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
arb-types = { workspace = true }
strsim = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
arb-db = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
async-trait = { workspace = true }
